# generator-pipeline-hs

./: README.md  generator-pipeline-exe.aux  generator-pipeline-exe.hp  generator-pipeline-exe.prof  generator-pipeline-exe.ps  generator-pipeline.cabal
app/: Main.hs
src/: Lib.hs  Parser.hs  Types.hs
src/Accumulators/: Basic.hs  MinCount.hs
