name:                generator-pipeline
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/pellagic-puffbomb/generator-pipeline#readme
license:             BSD3
license-file:        LICENSE
author:              Erik Aker
maintainer:          eraker@gmail.com
copyright:           2010 Erik Aker
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Parser
                     , Types
                     , Accumulators.Basic
  build-depends:       base >= 4.7 && < 5
                     , bytestring                     
                     , conduit >= 1.2.5
                     , conduit-combinators
                     , conduit-extra
                     , containers
                     , lens
                     , mtl
                     , parsec
                     , resourcet
                     , split >= 0.2.2
                     , text
                     , transformers
  default-language:    Haskell2010

executable generator-pipeline-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N 
  build-depends:       base
                     , bytestring                     
                     , conduit
                     , conduit-combinators
                     , conduit-extra
                     , containers
                     , generator-pipeline
                     , lens
                     , mtl
                     , parsec
                     , resourcet
                     , split >= 0.2.2
                     , text
                     , transformers
  default-language:    Haskell2010
  other-modules:       

test-suite generator-pipeline-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bytestring
                     , conduit
                     , conduit-combinators
                     , conduit-extra
                     , containers
                     , generator-pipeline
                     , lens
                     , mtl
                     , parsec
                     , resourcet
                     , split >= 0.2.2
                     , text
                     , transformers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pellagic-puffbomb/generator-pipeline
